# university-dashboard

./: .gitignore  README.md  implementation-notes.html  run.bat  run.sh  start.py
backend/: pyproject.toml
backend/app/: main.py  models.py  settings.py
backend/app/routes/: assignments.py  events.py  files.py  grades.py  modules.py  notes.py  open_file.py  search.py  serve.py  state.py  sync.py  tasks.py  topics.py
backend/app/services/: folder_scan.py  grades.py  search.py  seeding.py  store.py
backend/tests/: conftest.py  test_assignments.py  test_events.py  test_files.py  test_folder_scan.py  test_grades_route.py  test_grades_service.py  test_main.py  test_models.py  test_modules.py  test_notes.py  test_open.py  test_search.py  test_seeding.py  test_state.py  test_store.py  test_sync_route.py  test_tasks.py  test_topics.py
docs/superpowers/plans/: 2026-05-18-sync-dashboard-integration.md  2026-05-21-one-click-packaging.md  2026-05-21-unified-submission-status.md  2026-05-25-cdp-fetch-proxy.md
docs/superpowers/specs/: 2026-05-18-sync-dashboard-integration-design.md  2026-05-21-one-click-packaging-design.md  2026-05-21-unified-submission-status-design.md  2026-05-23-fa583-adaptive-study-tool-design.md  2026-05-25-cdp-fetch-proxy-design.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CountdownCard.module.css  CountdownCard.tsx  FileBrowser.module.css  FileBrowser.tsx  FileTree.module.css  FileTree.tsx  Layout.module.css  (+16 more)
sync/: .gitignore  README.md  sync.sh
(+43 files in other folders)
